<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- login -->
    <string name="label_easy_login">간편 로그인</string>
    <string name="label_kakao_login">카카오 계정으로 간편하게 로그인하세요</string>

    <!-- landing -->
    <string name="button_create_funding"> 펀딩만들기</string>
    <string name="button_login">로그인</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_previous">이전</string>
    <string name="button_next">다음</string>
    <string name="button_preview">미리보기</string>
    <string name="button_edit">←    내용 수정</string>
    <string name="button_start_funding">펀딩 시작    →</string>
    <string name="button_copy_link">&#032;&#032;링크&#032;복사</string>
    <string name="button_go_to_funding_detail">&#032;&#032;펀딩&#032;보기</string>
    <string name="label_going_to_product">상품 보러 가기</string>
    <string name="label_funding_aim_price">목표금액</string>
    <string name="tooltip_please_enter_available_product_link">유효한 상품링크를 입력해주세요</string>
    <string name="hint_product_link">상품 링크를 입력해주세요!</string>
    <string name="hint_funding_name">펀딩의 이름을 지어주세요!</string>
    <string name="hint_product_description">펀딩 내용을 담아주세요!</string>
    <string name="hint_product_price">펀딩 목표액을 입력해주세요 </string>
    <string name="hint_product_price_cursor">ㅣ&#032;</string>
    <string name="hint_product_option">상품 옵션을 입력해주세요!\n\n
       <font size="15">• 60자 이내 \n • 단일 상품이라면 작성하지 않으셔도 됩니다. </font>  </string>
    <string name="label_finish_creating_funding">펀딩이 시작되었습니다.\n 링크를 공유하여 펀딩을 받으세요!</string>
    <string name="tooltip_please_enter_available_product_option">60자 이내로 작성해주세요.</string>
    <string name="tooltip_please_enter_available_funding_name">펀딩 이름은 20자까지 입력 가능해요</string>
    <string name="tooltip_please_enter_available_funding_description">펀딩 내용은 100자 까지 입력 가능해요</string>
    <string name="number_key_pad_one">1</string>
    <string name="number_key_pad_two">2</string>
    <string name="number_key_pad_three">3</string>
    <string name="number_key_pad_four">4</string>
    <string name="number_key_pad_five">5</string>
    <string name="number_key_pad_six">6</string>
    <string name="number_key_pad_seven">7</string>
    <string name="number_key_pad_eight">8</string>
    <string name="number_key_pad_nine">9</string>
    <string name="number_key_pad_double_zero">00</string>
    <string name="number_key_pad_zero">0</string>
    <string name="number_key_pad_delete"> ← </string>
    <string name="label_funding_expired_date">언제까지 펀딩할까요?</string>
    <string name="label_copy_complete">복사 완료</string>
    <string name="label_funding_link">펀딩 링크</string>

    <!-- create funding -->
    <string name="notice_no_img_selected">이미지를 선택하지 않았습니다.</string>
    <string name="label_check_fill_content">내용을 다 입력하셨나요?</string>
    <string name="label_check_create_funding">펀딩을 시작할까요?</string>
    <string name="button_confirm_create_funding">네, 시작할게요!</string>
    <string name="button_modify_funding">수정하고 싶어요!</string>
    <string name="label_error">에러가 났어요!</string>
    <string name="label_add_photo">사진을 첨부해주세요</string>
    <string name="label_product_link">상품 링크</string>
    <string name="label_funding_description">펀딩 내용</string>
    <string name="label_funding_price">목표 금액</string>
    <string name="label_funding_date">펀딩 일정</string>
    <string name="label_funding_name">펀딩 이름</string>


    <!-- fundingDetail -->
    <string name="button_present">선물 하기</string>
    <string name="button_close_funding">펀딩 마감</string>
    <string name="button_already_closed_funding">마감된 펀딩입니다.</string>
    <string name="button_left_arrow">←</string>
    <string name="button_right_arrow">→</string>
    <string name="button_keep_funding">계속 진행</string>
    <string name="button_go_to_adjustment">펀딩 정산 받기</string>
    <string name="label_are_you_sure_to_close_funding">목표달성까지 00% 남았어요. \n 펀딩을 마감하시겠어요?</string>
    <string name="label_funding_detail_dialog_text">펀딩 기간이 종료되었습니다. \n [펀딩 마감]을 눌러 펀딩을 마감해주세요</string>
    <string name="label_funding_detail_dialog_edit">확인</string>

    <!-- present -->
    <string name="hint_present_price">선물할 금액을 입력해주세요!</string>
    <string name="label_present_to">에 선물하기</string>
    <string name="label_are_you_sure_to_present">원을 선물할까요?</string>
    <string name="label_success_to_present">%1$s원을 선물했어요!</string>
    <string name="button_share_funding">&#032;&#032;펀딩&#032;공유</string>

    <string name="label_funding_is_over">펀딩이 완료되었어요!</string>
    <string name="title_activity_close_funding">CloseFundingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--settle funding-->
    <string name="label_what_is_ur_account">어디로 받을까요?</string>
    <string name="label_select_bank">은행을 선택해주세요!</string>
    <string name="hint_enter_bank_account">계좌번호를 입력해주세요</string>
    <string name="label_recipient">받으시는 분이</string>
    <string name="label_account">계좌번호</string>
    <string name="label_recipient_is_right">님이 맞으신가요?</string>
    <string name="button_enter_account_again">다시 입력</string>
    <string name="button_get_settlement">정산 받기</string>
    <string name="button_go_new_funding">새로운 펀딩 만들기</string>
    <string name="label_settlement_is_over">정산 완료되었습니다! \n 좋은 선물 사세요 :)</string>
    <string name="title_activity_funding_list">FundingListActivity</string>

    <!-- fundingList -->
    <string name="label_my_funding_list">내가 만든 펀딩(*/ω＼*)</string>
    <string name="label_friend_funding_list">친구들의 펀딩 (●\'e\'●)</string>
    <string name="label_empty_funding_list">"아직 공유받은 펀딩이 없어요"</string>
    <string name="funding_detail_progress_expired_date">펀딩 마감까지  &lt;big>&lt;b>%1$s&lt;/b>&lt;/big>일 남았어요</string>
    <string name="funding_detail_progress_present_status"> &lt;big>&lt;b>%1$s&lt;/b>&lt;/big>명이 선물해줬어요.</string>
    <string name="present_list_present_status">총 &lt;font color="#FDA2E3">%1$s&lt;/font>분이 선물하셨어요!</string>

</resources>