<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.thinlineit.favorit_android.android.ui.createfunding.CreateFundingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_onlytop_round_white">

    <EditText
            android:id="@+id/productLinkEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:textSize="18sp"
            android:paddingBottom="18dp"
            android:paddingTop="10dp"
            android:layout_marginTop="75dp"
            android:paddingStart="20dp"
            android:background="@drawable/background_round_white"
            android:hint="@string/hint_product_option"
            android:text="@={viewModel.productOption}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tooltip_please_enter_available_product_option"
            android:visibility="@{viewModel.productOptionState.toVisibility()}"
            app:layout_constraintEnd_toEndOf="@id/productLinkEditText"
            app:layout_constraintStart_toStartOf="@id/productLinkEditText"
            app:layout_constraintTop_toBottomOf="@id/productLinkEditText" />

        <TextView
            android:id="@+id/previousButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_previous"
            android:textColor="@color/blue"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="25dp"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:textSize="17sp"
            android:textColor="@{viewModel.productOptionState.toColor()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>