<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.thinlineit.favorit_android.android.ui.createfunding.CreateFundingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".ui.createfunding.EnterProductLinkFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_onlytop_round_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.thinlineit.favorit_android.android.ui.customview.ProgressButtons
                android:id="@+id/progressButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/productLinkEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/hint_funding_name"
                android:paddingBottom="18dp"
                android:text="@={viewModel.fundingName}"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progressButtons" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tooltip_please_enter_available_funding_name"
                android:visibility="@{viewModel.fundingNameState.toVisibility()}"
                app:layout_constraintEnd_toEndOf="@id/productLinkEditText"
                app:layout_constraintStart_toStartOf="@id/productLinkEditText"
                app:layout_constraintTop_toBottomOf="@id/productLinkEditText" />

            <TextView
                android:id="@+id/previousButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="25dp"
                android:text="@string/button_previous"
                android:textColor="@color/blue"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:text="@string/button_next"
                android:textColor="@{viewModel.fundingNameState.toColor()}"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>